--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,19 @@
 body {
     display: flex;
+    height: 90vh;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     color: white;
     background-color: black;
     font-size: clamp(2vw, 16px, 1vw);
+}
+
+.video-generator {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    display: block;
 }
